packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const x  = ((1 + 1)) + ((1 + 1)).snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca double, align 8
  store double 4.000000e+00, double* %x_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

